# eFantasyREPO

./: .gitignore  README.md  aa
PlayerDataJSON/: top_players.json
ProDataCleaner/: cleaner.py  out.json  test.txt
eFantasyBackend/: Cargo.toml  Dockerfile  docker-compose.yml
eFantasyBackend/src/: auth.rs  errors.rs  guards.rs  main.rs
eFantasyBackend/src/db/: league.rs  mod.rs  pro.rs  user.rs
eFantasyBackend/src/handlers/: league.rs  mod.rs  pro.rs  user.rs
eFantasyBackend/src/models/: league.rs  mod.rs  pro.rs  user.rs
