[package]
name = "eFantasy"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
mongodb = "3.1.0"
thiserror = "1.0"
jsonwebtoken = "8.0"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "time"] }